--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@ body {
     background-color: #f1f1f1;
     padding: 0;
     margin: 0;
-    font-family: ‘Roboto’, sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 .like-button{
@@ -196,4 +196,8 @@ h1{
 
 .nav-logo i {
     margin-right: 8px;
+}
+
+iframe {
+    border: none;
 }
